--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,16 +4,8 @@ phases:
   pre_build:
     commands:
       - apt-get update
-      - apt-get -y install build-essential cmake git libssl-dev
+      - env DEBIAN_FRONTEND=noninteractive apt-get -y install build-essential cmake git libssl-dev libcurl4-openssl-dev zlib1g-dev awscli
   build:
     commands:
-      - git clone https://github.com/awslabs/aws-c-common.git
-      - mkdir c-common-build
-      - (cd c-common-build; cmake ../aws-c-common; make -j4)
-      - mkdir build
-      - (cd build; cmake -DAWS_C_COMMON_PATH=$PWD/../c-common-build ..)
-      - (cd build; make -j4)
-  post_build:
-    commands:
-      - (cd build; make test)
+      - build-tools/bin/codebuild-test.sh
 
