Implement CMM/MKP/MK APIs
* add missing include to suppress warning

* Initial design for materials manager

Just a header file and a trivial test which assures that header file is include-able.

* added default generate encrypt materials function

also changed generate/encrypt/decrypt data key to not allocate key struct

* Added source file I forgot last time

* A few changes

- Use void pointers in functions to allow for new struct types later
- Fix bug: rotate through master keys as you produce encrypted data keys
- single error clause to reduce code repetition

* moved t_materials.c to right directory

* Beginning implementation of virtual tables

* type safe virtual tables

* default generate encryption materials pulls master key list from MKP
instead of static list

* allocator/destructor for decryption materials and default generate decryption materials

* rename aws_common_hash_table aws_hash_table per change in aws-c-common

* better virtual table implementation per PR feedback

privatized implementation of standard CMM

* implementation of zero key MK/MKP plus a few other fixes

-added name field to virtual tables
-fixed list handling in get_master_keys and changed name

* Writing first unit test for standard CMM / zero MK/MKP

-changed from zero to constant MK/MKP, need to change filenames/comments
-test currently segfaulting, checking in to debug on another machine

* Bug fixes and working unit test

-fixed handling of lists in standard CMM
-changed zero MK/MKP to go back to zero value
-initialize singleton MK on MKP creation

* add unit test for decryption materials

-fixed small bug when singleton was created, deleted, and created again

* Carry alg id into encrypt/decrypt/generate data key functions

Also move external data key type to materials.h and revert
to internal data key type for cipher.h, in preparation for changing
materials code to use variable length data keys.

* change unencryp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,6 +175,7 @@ endif(AWSSDK_FOUND)
 
 add_test(cipher unit-test-suite cipher)
 add_test(header unit-test-suite header)
+add_test(materials unit-test-suite materials)
 
 set(TEST_DATA ${CMAKE_CURRENT_SOURCE_DIR}/tests/data)
 
