Implement the multi MKP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,6 +182,7 @@ add_test(materials unit-test-suite materials)
 add_test(enc_context unit-test-suite enc_context)
 add_test(encrypt unit-test-suite encrypt)
 add_test(raw_aes_mk unit-test-suite raw_aes_mk)
+add_test(multi_mkp unit-test-suite multi_mkp)
 
 set(TEST_DATA ${CMAKE_CURRENT_SOURCE_DIR}/tests/data)
 
