aws_cryptosdk_hdr_write proof

--- a/.cbmc-batch/jobs/aws_cryptosdk_hdr_write/Makefile
+++ b/.cbmc-batch/jobs/aws_cryptosdk_hdr_write/Makefile
@@ -3,7 +3,7 @@ include ../Makefile
 goto: proofs.goto
 	goto-instrument proofs.goto proofs.goto
 
-proofs.goto: aws-c-common hdr_zeroize_patch config
+proofs.goto: aws-c-common config
 	cd ../../..; \
     goto-cc .cbmc-batch/header_proofs.c source/header.c aws-c-common/source/byte_buf.c \
     aws-c-common/source/common.c aws-c-common/source/error.c .cbmc-batch/patches/string.c \
