Comments from PR

--- a/aws-encryption-sdk-cpp/CMakeLists.txt
+++ b/aws-encryption-sdk-cpp/CMakeLists.txt
@@ -91,8 +91,8 @@ if (BUILD_AWS_ENC_SDK_CPP)
     set_target_properties(t_integration_kms_mk PROPERTIES CXX_STANDARD 11 C_STANDARD 99)
     add_test(integration_kms_mk t_integration_kms_mk)
 
-    file(GLOB TestSources FOLLOW_SYMLINKS tests/unit/*.cpp)
-    foreach(test_cpp ${TestSources})
+    file(GLOB test_sources FOLLOW_SYMLINKS tests/unit/*.cpp)
+    foreach(test_cpp ${test_sources})
         get_filename_component(TEST_NAME ${test_cpp} NAME_WE)
         add_executable(${TEST_NAME} ${test_cpp} ${TEST_LIB})
         target_link_libraries(${TEST_NAME} ${PROJECT_NAME} ${AWS_ENC_SDK_CPP} testlibcpp)
