Add build logic for Windows CI builds
Note that the docker images need to be manually rebuilt and uploaded to the ECR
registry.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,10 @@ include(CheckLibraryExists)
 include(CheckCXXSourceCompiles)
 include(CheckCXXCompilerFlag)
 
+set(CMAKE_INSTALL_DEBUG_LIBRARIES TRUE)
+
+include(InstallRequiredSystemLibraries)
+
 # TODO: Static link?
 include(FindOpenSSL)
 # For tests
