--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
     commands:
       - apt-get update
       - env DEBIAN_FRONTEND=noninteractive apt-get -y install build-essential cmake git libssl-dev libcurl4-openssl-dev zlib1g-dev awscli valgrind
+      - env DEBIAN_FRONTEND=noninteractive apt-get -y build-dep cppcheck
   build:
     commands:
       - build-tools/bin/codebuild-test.sh
